--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-spring.datasource.url=jdbc:mysql://34.230.118.116:3306/usuario
-spring.datasource.username=workadmin
-spring.datasource.password=ContrasenaSegura456!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Configuración de MongoDB
+spring.data.mongodb.uri=mongodb+srv://ctapiad_db_user:MhRBXg6OTYK9AqQv@huerto.bi4rvwk.mongodb.net/Huerto
+spring.data.mongodb.database=Huerto
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Configuración del servidor
+server.port=8081
+
+# Configuración de logging
+logging.level.org.springframework.data.mongodb.core=DEBUG
+logging.level.com.fullstack.producto=DEBUG
+
+# Configuración de la aplicación
+spring.application.name=microservicio-productos
+server.servlet.context-path=/
