🔒 Seguridad: Eliminar credenciales hardcodeadas
- Eliminar archivos con secrets expuestos (.env, GITHUB_SECRETS.md)
- Actualizar .gitignore para excluir archivos sensibles
- Usar variables de entorno para MongoDB URI
- Crear SECRETS_SETUP.md con instrucciones seguras
- Crear .env.example como template
- Actualizar application.properties para usar ${MONGODB_URI}
- NO incluir credenciales ni claves privadas en el código

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,9 @@ build/
 ### VS Code ###
 .vscode/
 
-.envGITHUB_SECRETS.md
+### Sensitive Files ###
+.env
+GITHUB_SECRETS.md
+*.pem
+*.key
+secrets/
