--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Configuración de MongoDB
-spring.data.mongodb.uri=mongodb+srv://ctapiad_db_user:MhRBXg6OTYK9AqQv@huerto.bi4rvwk.mongodb.net/Huerto
+# IMPORTANTE: No incluir credenciales en el código. Usar variables de entorno en producción
+spring.data.mongodb.uri=${MONGODB_URI:mongodb+srv://ctapiad_db_user:${MONGODB_PASSWORD}@huerto.bi4rvwk.mongodb.net/Huerto}
 spring.data.mongodb.database=Huerto
 
 # Configuración del servidor
