--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,10 @@
 # Configuración de producción para MongoDB
 app.database.enabled=true
 
-# Configuración de MongoDB
-spring.data.mongodb.uri=mongodb+srv://ctapiad_db_user:MhRBXg6OTYK9AqQv@huerto.bi4rvwk.mongodb.net/Huerto
+# Perfil de producción para el microservicio de productos
+
+# Configuración de MongoDB (usar variables de entorno)
+spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=Huerto
 
 # Configuración del servidor
