--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       
+      - name: Verify secrets are configured
+        run: |
+          if [ -z "${{ secrets.EC2_HOST }}" ] || [ -z "${{ secrets.EC2_USER }}" ] || [ -z "${{ secrets.EC2_SSH_KEY }}" ]; then
+            echo "❌ ERROR: Secrets no configurados en GitHub"
+            echo ""
+            echo "Ve a: https://github.com/${{ github.repository }}/settings/secrets/actions"
+            echo ""
+            echo "Configura estos secrets:"
+            echo "  • EC2_HOST = 54.158.158.91"
+            echo "  • EC2_USER = ubuntu"
+            echo "  • EC2_SSH_KEY = (contenido de huerto.pem)"
+            echo ""
+            echo "Ver SECRETS_SETUP.md para más detalles"
+            exit 1
+          fi
+          echo "✅ Secrets configurados correctamente"
+      
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -27,7 +44,7 @@ jobs:
           ./mvnw clean package -DskipTests
       
       - name: Copy JAR to EC2
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
@@ -37,7 +54,7 @@ jobs:
           strip_components: 1
       
       - name: Deploy to EC2
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
@@ -47,13 +64,13 @@ jobs:
             sudo systemctl stop producto-service || true
             
             # Dar permisos al JAR
-            chmod +x /home/ubuntu/producto-service/*.jar
+            chmod +x /home/ubuntu/producto-service/*.jar || true
             
             # Reiniciar el servicio
             sudo systemctl daemon-reload
-            sudo systemctl enable producto-service
+            sudo systemctl enable producto-service || true
             sudo systemctl restart producto-service
             
             # Verificar estado
             sleep 5
-            sudo systemctl status producto-service
+            sudo systemctl status producto-service --no-pager
