--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,15 +16,15 @@ jobs:
       
       - name: Verify secrets are configured
         run: |
-          if [ -z "${{ secrets.EC2_HOST }}" ] || [ -z "${{ secrets.EC2_USER }}" ] || [ -z "${{ secrets.EC2_SSH_KEY }}" ]; then
+          if [ -z "${{ secrets.AWS_HOST }}" ] || [ -z "${{ secrets.AWS_USER }}" ] || [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
             echo "❌ ERROR: Secrets no configurados en GitHub"
             echo ""
             echo "Ve a: https://github.com/${{ github.repository }}/settings/secrets/actions"
             echo ""
             echo "Configura estos secrets:"
-            echo "  • EC2_HOST = 54.158.158.91"
-            echo "  • EC2_USER = ubuntu"
-            echo "  • EC2_SSH_KEY = (contenido de huerto.pem)"
+            echo "  • AWS_HOST = 54.158.158.91"
+            echo "  • AWS_USER = ubuntu"
+            echo "  • SSH_PRIVATE_KEY = (contenido de huerto.pem)"
             echo ""
             echo "Ver SECRETS_SETUP.md para más detalles"
             exit 1
@@ -46,9 +46,9 @@ jobs:
       - name: Copy JAR to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          host: ${{ secrets.AWS_HOST }}
+          username: ${{ secrets.AWS_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "target/*.jar"
           target: "/home/ubuntu/producto-service"
           strip_components: 1
@@ -56,9 +56,9 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          host: ${{ secrets.AWS_HOST }}
+          username: ${{ secrets.AWS_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             # Detener el servicio anterior si existe
             sudo systemctl stop producto-service || true
