--- a/producto-service.service
+++ b/producto-service.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=ubuntu
 WorkingDirectory=/home/ubuntu/producto-service
-ExecStart=/usr/bin/java -jar /home/ubuntu/producto-service/*.jar
+ExecStart=/usr/bin/java -jar producto-0.0.1-SNAPSHOT.jar
 Restart=always
 RestartSec=10
 StandardOutput=journal
