nuevo endpoint para subir imagenes al s3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,15 @@ logging.level.com.fullstack.producto=DEBUG
 # Configuración de la aplicación
 spring.application.name=microservicio-productos
 server.servlet.context-path=/
+
+# Configuración de AWS S3
+# Si estás en EC2 con IAM Role, establece use-iam-role=true y omite las credenciales
+# Si estás en desarrollo local, establece use-iam-role=false y proporciona credenciales
+aws.s3.use-iam-role=${AWS_USE_IAM_ROLE:false}
+aws.s3.access-key-id=${AWS_ACCESS_KEY_ID:}
+aws.s3.secret-access-key=${AWS_SECRET_ACCESS_KEY:}
+aws.s3.region=us-east-1
+aws.s3.bucket-name=image-huerto
+aws.s3.folder=productos/imagenes
+aws.s3.presigned-url-duration=15
+
