--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
 # EJEMPLO - No incluir valores reales
+# Copia este archivo como .env y completa con tus valores reales
+
+# MongoDB
 MONGODB_URI=mongodb+srv://usuario:PASSWORD@cluster.mongodb.net/Database
 MONGODB_PASSWORD=TU_PASSWORD_AQUI
+
+# AWS S3 (Desarrollo Local)
+# Para desarrollo local, necesitas configurar credenciales explícitas
+AWS_ACCESS_KEY_ID=AKIA...
+AWS_SECRET_ACCESS_KEY=wJalr...
+AWS_USE_IAM_ROLE=false
+
+# AWS S3 (EC2 con IAM Role)
+# Si estás en EC2 con IAM Role, solo necesitas esto:
+# AWS_USE_IAM_ROLE=true
+
